// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="concise-issue-box clearfix selected"
>
  <div
    className="concise-issue-box-message"
    onClick={[Function]}
    role="listitem"
    tabIndex={0}
  >
    Reduce the number of conditional operators (4) used in the expression
  </div>
  <div
    className="concise-issue-box-attributes"
  >
    <TypeHelper
      className="display-block little-spacer-right"
      type="BUG"
    />
    <ConciseIssueLocations
      issue={
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [],
          "fromHotspot": false,
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "organization": "myorg",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "projectOrganization": "org",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        }
      }
      onFlowSelect={[MockFunction]}
      selectedFlowIndex={0}
    />
  </div>
  <ConciseIssueLocationsNavigator
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [],
        "fromHotspot": false,
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "organization": "myorg",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "projectOrganization": "org",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
    onLocationSelect={[MockFunction]}
    scroll={[MockFunction]}
    selectedFlowIndex={0}
    selectedLocationIndex={0}
  />
  <LocationNavigationKeyboardShortcuts
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [],
        "fromHotspot": false,
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "organization": "myorg",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "projectOrganization": "org",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="concise-issue-box clearfix selected"
>
  <div
    className="concise-issue-box-message"
    onClick={[Function]}
    role="listitem"
    tabIndex={0}
  >
    Reduce the number of conditional operators (4) used in the expression
  </div>
  <div
    className="concise-issue-box-attributes"
  >
    <TypeHelper
      className="display-block little-spacer-right"
      type="BUG"
    />
    <ConciseIssueLocations
      issue={
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "fromHotspot": false,
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "organization": "myorg",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "projectOrganization": "org",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        }
      }
      onFlowSelect={[MockFunction]}
      selectedFlowIndex={0}
    />
  </div>
  <ConciseIssueLocationsNavigator
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [
          Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
        ],
        "fromHotspot": false,
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "organization": "myorg",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "projectOrganization": "org",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
    onLocationSelect={[MockFunction]}
    scroll={[MockFunction]}
    selectedFlowIndex={0}
    selectedLocationIndex={0}
  />
  <LocationNavigationKeyboardShortcuts
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [
          Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
        ],
        "fromHotspot": false,
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "organization": "myorg",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "projectOrganization": "org",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
  />
</div>
`;
